app/assets/stylesheets/application.scss
@import "materialize";
@import "materialize/extras/nouislider";
@import "https://fonts.googleapis.com/icon?family=Material+Icons";

/*App*/
body {
  background-color: #CBC7BC;
}

.footer-right {
  text-align: right;
}

.footer-left {
  text-align: left;
}

.nav-bar {
  background-color: #231F20;
}

.nav-img img {
  height: auto;
  max-width: 35%;
}

.pic-words {
  text-shadow: -1.5px 0 black, 0 1.5px black, 1.5px 0 black, 0 -1.5px black;
}

.goodwood-img img {
  width: 50%;


}

/*Home Page*/

.font-carousel {
  margin-top: 20px;
  margin-bottom: 20px;
}

/*Uni*/
@media #{$small-and-down} {
    .card.medium {
      height: auto;
    }
    .card.medium .card-content {
      height: auto;
    }
    .card.medium .card-action {
      position: relative;
    }
  }




/*Forms*/

  /* label color */
   .input-field label {
     color: #000;
   }
   /* label focus color */
   .input-field input[type=text]:focus + label {
     color: #000;
   }
   /* label underline focus color */
   .input-field input[type=text]:focus {
     border-bottom: 1px solid #000;
     box-shadow: 0 1px 0 0 #000;
   }
   /* valid color */
   .input-field input[type=text].valid {
     border-bottom: 1px solid #000;
     box-shadow: 0 1px 0 0 #000;
   }
   /* invalid color */
   .input-field input[type=text].invalid {
     border-bottom: 1px solid #000;
     box-shadow: 0 1px 0 0 #000;
   }
   /* icon prefix focus color */
   .input-field .prefix.active {
     color: #000;
   
   /* datepicker */
   .datepicker input {
     color: #000;
   }
}

